fix styling overlapping

--- a/client/src/components/Team/Team.module.css
+++ b/client/src/components/Team/Team.module.css
@@ -21,7 +21,7 @@
   margin-bottom: 10px;
 }
 
-img {
+.imgLogo {
   height: 30px;
   width: 30px;
 }
